update author info

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,4 +8,18 @@ twitter: https://twitter.com/yangjinlong86
 github: https://github.com/funny-eagle
 ---
 
-Jason Yang 是一个穷酸的不入流码农。喜欢软件架构设计，折腾操作系统，写没用的代码。
+我是一个穷酸、不入流的码农，同时也充满个性与激情。
+
+在代码的世界里摸爬滚打了十多年，依然怀揣着对编程的热爱，写一些没用的代码却能给我带来无尽的乐趣。
+
+喜欢挑战自我，在架构设计的道路上不断探索。执着的反复折腾各种 Linux 发行版。
+
+我还是一个摇滚信徒，拨动着吉他的琴弦，让激昂的旋律在心中激荡。
+
+I am a poor and mediocre coder, but also full of personality and passion.
+
+I have been struggling in the world of code for more than ten years, still holding the love for programming, writing some useless codes but bringing me endless joy.
+
+I like to challenge myself and constantly explore on the road of architecture design. I am persistently and repeatedly tossing various Linux distributions.
+
+I am also a rock believer, plucking the strings of the guitar and letting the exciting melody surge in my heart.
