--- a/data/blog/architecture-english-word.mdx
+++ b/data/blog/architecture-english-word.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[系统架构设计师]英语词汇"
+title: "系统架构设计师-英语词汇"
 date: "2024-02-27 22:57:47"
 summary: "系统架构设计师英语词汇"
 tags: ['coding']
@@ -7,6 +7,7 @@ tags: ['coding']
 ---
 
 专业英语词汇汇总：
+
 - architect 架构，架构师
 - architecture 架构
 - analysis 分析
@@ -333,7 +334,6 @@ tags: ['coding']
 - Software Engineering
 - behavioral modeling 行为建模
 - identify and define functions 识别并定义功能
-- 3 basic forms 三个基本形式
 - state machines 状态机
 - a collection of defined states, events and transitions 已定义状态、事件和转换的集合
 - control-flow 控制流
