move images to /public/images

--- a/data/blog/10-hex-and-binary.mdx
+++ b/data/blog/10-hex-and-binary.mdx
@@ -37,7 +37,7 @@ tags: ['coding']
 
 ## 10进制和2进制数的转换
 
-![0到99的10进制和2进制计数](./images/0-99的10进制和2进制计数.png)
+![0到99的10进制和2进制计数](/images/0-99的10进制和2进制计数.png)
 
 ### 2 进制转换成 10 进制
 
