--- a/data/blog/architectrue-distributed-design-paper.mdx
+++ b/data/blog/architectrue-distributed-design-paper.mdx
@@ -3,7 +3,7 @@ title: 论分布式系统设计与实现
 date: "2024-04-24"
 summary: "论分布式系统设计与实现"
 tags: ['coding']
-draft: true
+draft: false
 ---
 
 > 2024年系统架构设计师的备考论文
