--- a/data/blog/englishman-on-sunset-boulevard.mdx
+++ b/data/blog/englishman-on-sunset-boulevard.mdx
@@ -6,7 +6,7 @@ tags: ['music']
 
 ---
 
-![tribes](./images/tribes-william-kennedy.jpeg)
+![tribes](/images/tribes-william-kennedy.jpeg)
 
 > 原调C调，我唱稍微有点儿高，降成B调刚好
 
