--- a/data/blog/graph-algorithms.mdx
+++ b/data/blog/graph-algorithms.mdx
@@ -10,7 +10,7 @@ tags: ['coding']
 
 ## 什么是图
 
-![basic-graph](./images/basic-graph.png)
+![basic-graph](/images/basic-graph.png)
 
 [图](https://zh.wikipedia.org/wiki/图_(数学))是由节点（node）和边（edge）组成的一种数据结构。上图中，A 和 B 是该图的节点，连接线是图的一条边。
 
@@ -22,19 +22,19 @@ tags: ['coding']
 
 如果给图的每条边都规定一个方向，那么该图就称为有向图，有向图所有的连接关系都是单向的。
 
-![directed-graph](./images/directed-graph.png)
+![directed-graph](/images/directed-graph.png)
 
 ### 无向图
 
 边没有方向的图称为无向图，无向图其实意味着图的**两个节点彼此指向对方**，其实就是环。
 
-![undirected-graph](./images/undirected-graph.png)
+![undirected-graph](/images/undirected-graph.png)
 
 ### 加权图
 
 图的每条边都有关联的数字，这些数字称为**权重**，带权重的图称为**加权图**。
 
-![directed-wieghted-graph](./images/directed-weighted-graph.png)
+![directed-wieghted-graph](/images/directed-weighted-graph.png)
 
 ### 非加权图
 
