--- a/data/blog/install-redis-desktop-manager-on-ubuntu.mdx
+++ b/data/blog/install-redis-desktop-manager-on-ubuntu.mdx
@@ -38,11 +38,11 @@ dpkg: 处理软件包 redis-desktop-manager (--install)时出错：
 
 3. 如上所示，会提示缺少依赖，到 https://pkgs.org/ 搜索依赖包，下载后双击deb文件进行依赖包的安装；
 
-   ![](./images/pkg-zlibc.png)
+   ![](/images/pkg-zlibc.png)
 
-   ![](./images/pkg-libpng.png)
+   ![](/images/pkg-libpng.png)
 
-   ![](./images/pkg-libicu52.png)
+   ![](/images/pkg-libicu52.png)
 
 4. 再次执行 `sudo dpkg -i redis-desktop-manager_0.8.3-120_amd64.deb`
 
