--- a/data/blog/operating-system-knowledge.mdx
+++ b/data/blog/operating-system-knowledge.mdx
@@ -59,7 +59,7 @@ tags: ['coding']
 - 阻塞态：一个进程正在等待某一事件发生而暂时停止运行，此时即使得到处理机也无法运行。
 
 进程的三态模型
-![进程的三态模型.drawio.png](./images/4caa907c23b54a33b0336575424edd9f.png)
+![进程的三态模型.drawio.png](/images/4caa907c23b54a33b0336575424edd9f.png)
 
 
 PCB（进程控制块）的三种组织方式：
@@ -75,7 +75,7 @@ PCB（进程控制块）的三种组织方式：
 前趋图可以用来表示多个程序或进程的执行顺序。
 
 
-![前趋图.drawio.png](./images/b206219664074929ad31d862a220c1fa.png)
+![前趋图.drawio.png](/images/b206219664074929ad31d862a220c1fa.png)
 
 
 ### 进程的通信
@@ -128,7 +128,7 @@ V操作表示唤醒操作，将信号量S的值加1，S = S + 1。
 磁盘调度分为**移臂调度**和**旋转调度**，先进行移臂调度，再进行旋转调度。移臂调度寻找磁道，旋转调度寻找扇区。
 
 
-![硬盘结构.jpeg](./images/4d23689ea40b4b7790db884ae9fdd9e1.jpeg)
+![硬盘结构.jpeg](/images/4d23689ea40b4b7790db884ae9fdd9e1.jpeg)
 spindle：主轴
 disk：磁盘
 saved file：数据（保存在扇区内）
