--- a/data/blog/tribes-we-were-children-chords.mdx
+++ b/data/blog/tribes-we-were-children-chords.mdx
@@ -5,7 +5,7 @@ summary: "[Tribes] We Were Children 吉他和弦谱"
 tags: ['music', 'chords']
 
 ---
-![tribes](./images/tribes-band.jpg)
+![tribes](/images/tribes-band.jpg)
 
 ```
 Intro : B F# E Eb x2
