--- a/data/blog/arts-38.mdx
+++ b/data/blog/arts-38.mdx
@@ -128,11 +128,11 @@ public class MergeTwoBinaryTrees {
 
 这要从软件模块的层次说起，我们在做项目时，会写很多的低层方法，例如访问数据库、处理某个业务的逻辑等等。再由高层的模块去调用这些方法。这就叫做高层次依赖低层次。
 
-![](./images/高层依赖低层.png)
+![](/images/高层依赖低层.png)
 
 一旦低层模块需要修改或更换，那么高层模块必然也要随之修改，两者的是高度耦合的，这种对于低层次组件的依赖限制了高层组件被重用的可行性。如果将高层组件依赖于抽象的接口或者抽象类，根据里氏替换原则，使用父类的地方都可以用子类来替换。这样就可以将高层组件和低层组件进行解耦，便于重用不同层级的组件，降低软件的维护成本，更加灵活。
 
-![](./images/依赖倒置-高层依赖接口.png)
+![](/images/依赖倒置-高层依赖接口.png)
 
 依赖倒置可以说是面向对象设计的标志，编程时要考虑针对抽象编程而不是针对细节编程，即程序中所有的依赖关系都终止与抽象类或者接口。
 
