--- a/data/blog/basic-of-network.mdx
+++ b/data/blog/basic-of-network.mdx
@@ -79,7 +79,7 @@ tags: ['coding']
 ## 五、网络硬件
 
 网络数据包从客户端计算机发出后，要经过集线器、交换机和路由器最终进入互联网。实际上家用的路由器已经集成了集线器和交换机的功能。
-![fb72a80187ca8a9ebbd9ea9d6d540611.png](./images/fb72a80187ca8a9ebbd9ea9d6d540611.png)
+![fb72a80187ca8a9ebbd9ea9d6d540611.png](/images/fb72a80187ca8a9ebbd9ea9d6d540611.png)
 
 ### 1、集线器
 
@@ -104,8 +104,8 @@ tags: ['coding']
 ## 六、参考文献
 
 - [《Wireshark数据包分析实战（第3版）》](https://book.douban.com/subject/30387220/)
-    ![6ec6033b3adaf648ce6525fb37c18cdb.png](./images/6ec6033b3adaf648ce6525fb37c18cdb.png)
+    ![6ec6033b3adaf648ce6525fb37c18cdb.png](/images/6ec6033b3adaf648ce6525fb37c18cdb.png)
 - [《计算机网络-自顶向下方法（第7版）》](https://book.douban.com/subject/30280001//)
-    ![f588dda7a0d8bbf01ab87a3b98467fc5.png](./images/f588dda7a0d8bbf01ab87a3b98467fc5.png)
+    ![f588dda7a0d8bbf01ab87a3b98467fc5.png](/images/f588dda7a0d8bbf01ab87a3b98467fc5.png)
 - [《网络是怎样连接的》](https://book.douban.com/subject/26941639/)
-    ![de475af89e4481c1ab15cb964305effa.png](./images/de475af89e4481c1ab15cb964305effa.png)
+    ![de475af89e4481c1ab15cb964305effa.png](/images/de475af89e4481c1ab15cb964305effa.png)
