--- a/data/blog/remembering-haoel.mdx
+++ b/data/blog/remembering-haoel.mdx
@@ -26,9 +26,9 @@ tags: ['life']
 > Hao Chen [17 hours ago]
 > 然后，日志归档写的还不够，没有细节。
 
-![mntfun](./images/mntfun.png)
+![mntfun](/images/mntfun.png)
 
-![wechat.png](./images/wechat.png)
+![wechat.png](/images/wechat.png)
 
 通过读友会群加了他的微信，通过之后我很兴奋，居然加了偶像的微信，我跟他说，我以为您会不同意加好友，他说不会的。后来是2022年有段时间我在工作上有一些变更和挑战，面临着未知的压力，那段时间特别焦躁，每天看书学习到深夜。有一天我鼓起勇气在微信上给皓哥发消息求指导，皓哥耐心询问着我的工作情况，让我非常感动。现在看来，那个时候他的任何一句鼓励都是我最强大的精神支柱。
 
