--- a/data/blog/wind-term-hanging-problem.mdx
+++ b/data/blog/wind-term-hanging-problem.mdx
@@ -9,11 +9,11 @@ tags: ['coding']
 
 WindTerm2.5.0，使用`SSH`用户名和密码方式登录Linux服务器。新建会话，输入IP和端口后，到输入用户名界面，输入用户名后，提示”身份验证被拒绝，请重试“，然后软件假死卡住，30秒到1分钟后又弹出身份验证失败请重试，输入密码后又跳转到登录界面，继续输入用户名，又会假死。。。
 
-![1.jpg](./images/1.jpg)
+![1.jpg](/images/1.jpg)
 
-![2.jpg](./images/2.jpg)
+![2.jpg](/images/2.jpg)
 
-![3.jpg](./images/3.jpg)
+![3.jpg](/images/3.jpg)
 
 ## 解决办法
 
