--- a/data/blog/architecture-case-analysis.mdx
+++ b/data/blog/architecture-case-analysis.mdx
@@ -6,7 +6,7 @@ tags: ['coding']
 
 ---
 
-## 一、架构风格比较与分析（2022年）：
+## 一、架构风格比较与分析（2022年）
 
 ![alt text](/images/q1.png)
 
@@ -80,7 +80,9 @@ tags: ['coding']
 ![alt text](/images/q5.png)
 
 MQTT（Message Queuing Telemetry Transport）协议是一种轻量级的发布/订阅消息协议，用于物联网（IoT）设备之间的通信。它基于 TCP/IP 协议，以简洁、高效的方式传输消息。
+
 MQTT 协议具有以下特点：
+
 - 发布/订阅模式：设备可以发布消息，其他设备可以订阅感兴趣的主题来接收消息。
 - 轻量级：报文小，占用带宽少，适用于资源受限的设备。
 - 可靠性：支持 QoS 级别，确保消息的可靠传输。
@@ -91,7 +93,6 @@ MQTT 协议广泛应用于物联网领域，如智能家居、工业自动化等
 ![alt text](/images/q5-2.png)
 
 ![alt text](/images/q5-2-1.png)
-
 
 ![alt text](/images/q5-3.png)
 
