--- a/data/blog/database-info-encode-and-decode.mdx
+++ b/data/blog/database-info-encode-and-decode.mdx
@@ -2,7 +2,7 @@
 title: Spring 数据库密码加密
 date: "2017-07-18 12:03:42"
 summary: "一些项目会要求不能出现明文密码，简单三步，实现配置文件里的用户名和密码加密。"
-tags: ['coding']
+tags: ['coding','java']
 
 ---
 
