--- a/data/blog/java-bytecode-and-instructions.mdx
+++ b/data/blog/java-bytecode-and-instructions.mdx
@@ -2,7 +2,7 @@
 title: Java字节码和指令集
 date: "2023-06-30 10:36:19"
 summary: "理解字节码以及理解Java编译器如何生成Java字节码与学习汇编知识对于C/C++程序员有一样的意义。"
-tags: ['coding']
+tags: ['coding','java']
 
 ---
 
