--- a/data/blog/java-http-url-connection-post.mdx
+++ b/data/blog/java-http-url-connection-post.mdx
@@ -1,8 +1,8 @@
 ---
 title: JAVA HttpURLConnection Post方式提交传递参数
 date: "2018-05-08 16:46:13"
-summary: "如题，一段代码示例。"
-tags: ['coding']
+summary: " JAVA HttpURLConnection Post方式提交传递参数"
+tags: ['coding','java']
 
 ---
 
