--- a/data/blog/rebuild-resttemplate-in-springboot.mdx
+++ b/data/blog/rebuild-resttemplate-in-springboot.mdx
@@ -2,8 +2,8 @@
 title: "在Springboot中重建RestTemplate"
 date: "2024-06-03 18:43:48"
 summary: "在Springboot中重建RestTemplate"
-tags: ['coding']
-draft: true
+tags: ['coding', 'java']
+draft: false
 ---
 
 最近有个需求，用户希望RestTemplate能够绕过ssl证书验证，直接访问目标地址。虽然这并不安全，但是作为开发人员，只能有求必应啊。
