--- a/data/blog/two-nextjs-blog-problems.mdx
+++ b/data/blog/two-nextjs-blog-problems.mdx
@@ -10,9 +10,9 @@ draft: false
 
 一个问题是这样的，先啰嗦以下背景，我的博客网站是基于Tailwind Nextjs Starter Blog搭建的，配置好之后 yarn build，把生成的静态文件直接配在nginx下，OK，看似一切正常，然而在文章页面刷新或者直接复制粘贴文章链接访问，就直接到我配置的404页面了。。。检查了nginx的配置，没有问题，所以我猜可能是路由的问题，搜到了以下两个链接，试着配了以下，问题解决。
 
-https://stackoverflow.com/questions/54815348/nextjs-page-goes-to-404-on-refresh
+[nextjs-page-goes-to-404-on-refresh](https://stackoverflow.com/questions/54815348/nextjs-page-goes-to-404-on-refresh)
 
-https://stackoverflow.com/questions/62208254/nextjs-404-error-on-reload-refresh-action
+[nextjs-404-error-on-reload-refresh-action](https://stackoverflow.com/questions/62208254/nextjs-404-error-on-reload-refresh-action)
 
 在`next.config.js` 配置 `exportTrailingSlash: true`，然后重新打包即可。
 ```javascript
