--- a/data/blog/I-passed-the-architect-exam-in-2024.mdx
+++ b/data/blog/I-passed-the-architect-exam-in-2024.mdx
@@ -6,4 +6,4 @@ tags: ['life']
 draft: false
 ---
 
-![2024-architect-exam.png](2024-architect-exam.png)
+![2024-architect-exam.png](/images/2024-architect-exam.png)
