--- a/data/blog/I-passed-the-architect-exam-in-2024.mdx
+++ b/data/blog/I-passed-the-architect-exam-in-2024.mdx
@@ -1,9 +1,45 @@
 ---
-title: '出成绩了，看到成绩一身鸡皮疙瘩'
+title: '看到软考成绩后一身的鸡皮疙瘩'
 date: "2024-06-25 21:53:00"
 summary: "2024年参加架构师考试后的一些感想"
 tags: ['life']
 draft: false
 ---
 
+> 2024年上半年工作太忙，经常加班，有效学习的时间真的不够，我考完就已做好下半年再考的准备了。。。
+
+分数出来之后，速速查看，真的是一身鸡皮疙瘩，惊险刺激的分数上岸
+
 ![2024-architect-exam.png](/images/2024-architect-exam.png)
+
+部门比较重视软考，让准备个简单的上岸分享，简单列了一下提纲。
+
+## 学习计划
+
+ - 重视考试，坚定信心
+ - 每天1个小时，严格执行计划
+ - 家人支持
+
+## 选择题
+
+- 刷历年真题
+- 错题回顾
+- 有舍有得
+  - 运筹学（搞不定就放弃，不要多花时间）
+  - 英语（靠吃老本，能得几分算几分）
+
+## 案例题
+
+- 刷历年真题
+- 软件工程知识点
+  - 方法、过程、工具
+  - 新技术
+- 软件架构知识点
+  - 架构风格
+  - 架构评估
+  - 八大架构
+
+## 论文
+
+- 学习论文框架
+- 一定要动手写
