--- a/data/blog/I-passed-the-architect-exam-in-2024.mdx
+++ b/data/blog/I-passed-the-architect-exam-in-2024.mdx
@@ -1,5 +1,5 @@
 ---
-title: '看到软考成绩后一身的鸡皮疙瘩'
+title: '软考架构师上岸分享'
 date: "2024-06-25 21:53:00"
 summary: "2024年参加架构师考试后的一些感想"
 tags: ['life']
@@ -12,34 +12,38 @@ draft: false
 
 ![2024-architect-exam.png](/images/2024-architect-exam.png)
 
-部门比较重视软考，让准备个简单的上岸分享，简单列了一下提纲。
+部门比较重视软考，让准备个简单的上岸分享，简单列了一下：
 
-## 学习计划
+## 一、重视考试，坚定信心
 
- - 重视考试，坚定信心
- - 每天1个小时，严格执行计划
- - 家人支持
+软考是一项具有挑战性的考试，但只要我们有坚定的信念和决心，就一定能够成功。要充分认识到软考对于个人职业发展的重要性，将其视为提升自己能力和竞争力的重要机会。
 
-## 选择题
+## 二、时间安排
 
-- 刷历年真题
-- 错题回顾
-- 有舍有得
-  - 运筹学（搞不定就放弃，不要多花时间）
-  - 英语（靠吃老本，能得几分算几分）
+每天保证 1 个小时的学习时间，严格按照计划执行。可以将这 1 个小时安排在自己效率较高的时间段，比如晚上下班后或早上起床后。
 
-## 案例题
+## 三、选择题部分
 
-- 刷历年真题
-- 软件工程知识点
-  - 方法、过程、工具
-  - 新技术
-- 软件架构知识点
-  - 架构风格
-  - 架构评估
-  - 八大架构
+1. 刷历年真题：通过做历年真题，熟悉考试题型和考点分布。建议至少做近 5 年的真题。
+2. 错题回顾：对于做错的题目，要认真分析原因，总结知识点，进行有针对性的复习。
 
-## 论文
+## 四、有舍有得
 
-- 学习论文框架
-- 一定要动手写
+1. 运筹学：如果经过一段时间的学习仍然觉得难以掌握，不要在这部分花费过多时间，适当放弃，将精力集中在其他更容易得分的部分。
+2. 英语：如果基础较好，可以靠吃老本，争取能得几分算几分。
+
+## 五、案例题部分
+1. 刷历年真题：了解案例题的出题风格和答题思路，掌握常见的考点和答题技巧。
+2. 软件工程知识点：重点学习软件工程中的方法、过程、工具等内容，理解其概念和应用场景。
+3. 新技术：关注行业内的新技术发展趋势，了解其基本概念和特点。
+
+## 六、软件架构知识点
+1. 架构风格：熟悉常见的软件架构风格，如分层架构、微服务架构等。
+2. 架构评估：掌握架构评估的方法和指标。
+3. 八大架构：深入学习八大架构的原理和应用。
+
+## 七、论文部分
+1. 学习论文框架：了解论文的结构和写作要求，掌握引言、正文、结论等部分的写作方法。
+2. 一定要动手写：多进行写作练习，按照考试要求的时间和字数完成论文，提高写作速度和质量。
+
+在学习过程中，要保持积极的心态，遇到问题及时解决，同时要争取家人的支持，为自己创造一个良好的学习环境。相信只要坚持努力，就一定能够顺利通过软考！
