translate some worlds to Chinese

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
 name: Jason Yang
 avatar: /static/images/avatar.png
-occupation: Programmer
+occupation: 程序员
 company: swcares
 email: yangjinlong86@gmail.com
 twitter: https://twitter.com/yangjinlong86
