update post mono and flux

--- a/data/blog/mono-and-flux.mdx
+++ b/data/blog/mono-and-flux.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Java 中的 `Mono` 和 `Flux` 的详细介绍及使用场景"
+title: "Java 中的 Mono 和 Flux 的详细介绍及使用场景"
 date: 2025-01-15
-summary: "`Mono` 和 `Flux` 是 Java 中 Reactive 编程的核心元素，它们为处理异步操作提供了强大的抽象。"
+summary: "Mono 和 Flux 是 Java 中 Reactive 编程的核心元素，它们为处理异步操作提供了强大的抽象。"
 tags: ['coding']
 draft: false
 ---
