--- a/data/blog/mono.mdx
+++ b/data/blog/mono.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Mono类怎么用"
 date: 2025-01-15
-summary: "在 Reactive 编程中，`Mono<>` 可以用来处理异步操作的结果，这些操作可能会返回一个元素、一个完成信号或者一个错误。它是一个强大的工具，可用于构建响应式、非阻塞和异步的应用程序，尤其适合于现代分布式系统和高并发环境"
+summary: "在 Reactive 编程中，Mono<> 可以用来处理异步操作的结果，这些操作可能会返回一个元素、一个完成信号或者一个错误。它是一个强大的工具，可用于构建响应式、非阻塞和异步的应用程序，尤其适合于现代分布式系统和高并发环境"
 tags: ['coding']
-draft: false
+draft: true
 ---
 
 ### 一、概述
