--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,22 +8,17 @@ twitter: https://twitter.com/yangjinlong86
 github: https://github.com/funny-eagle
 ---
 
-一个穷酸、不入流的码农，
+码农生涯虽清苦，
+个性激情却满腹。
+代码世界游十年，
+热爱编程心不变。
 
-不过也算充满个性与激情。
+无用代码写不停，
+乐趣无穷自欢欣。
+架构设计勇攀登，
+挑战自我永向前。
 
-在代码的世界里摸爬滚打了十几年，
-
-依然怀揣着对编程的热爱，
-
-虽然写一些没用的代码但能给我带来无尽的乐趣。
-
-喜欢挑战自我，在架构设计的道路上不断探索。
-
-执着的反复折腾各种发行版的操作系统。
-
-我还是一个摇滚信徒，
-
-拨动着吉他的琴弦，
-
-让激昂的旋律在心中激荡。
+操作系统折腾频，
+发行版里寻新天。
+摇滚信徒心不灭，
+吉他声中梦飞扬。
