--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,17 +8,10 @@ twitter: https://twitter.com/yangjinlong86
 github: https://github.com/funny-eagle
 ---
 
-码农生涯虽清苦，
-个性激情却满腹。
-代码世界游十年，
-热爱编程心不变。
+```
+           无题
 
-无用代码写不停，
-乐趣无穷自欢欣。
-架构设计勇攀登，
-挑战自我永向前。
+码农生涯虽清苦，个性激情仍满腹。
 
-操作系统折腾频，
-发行版里寻新天。
-摇滚信徒心不灭，
-吉他声中梦飞扬。
+无用代码写不停，摇滚信徒心不灭。
+```
