--- a/data/blog/86-ban-wubi.mdx
+++ b/data/blog/86-ban-wubi.mdx
@@ -16,6 +16,58 @@ draft: false
 
 ![wubi-86](/images/iWuBi-86-keyboard.png)
 
+### 口诀
+
+横区
+
+```text
+G 王旁青头戋（兼）五一
+F 土士二干十寸雨
+D 大犬三（羊）古石厂
+S 木丁西
+A 工戈草头右框七
+```
+
+竖区
+
+```text
+H 目具上止卜虎皮
+J 日早两竖与虫依
+K 口与川，字根稀
+L 田甲方框四车力
+M 山由贝，下框几
+```
+
+撇区
+
+```text
+T 禾竹一撇双人立，反文条头共三一
+R 白手看头三二斤
+E 月彡（衫）乃用家衣底
+W 人和八，三四里
+Q 金勺缺点无尾鱼，犬旁留儿一点夕，氏无七（妻）
+```
+
+点区
+
+```text
+Y 言文方广在四一，高头一捺谁人去
+U 立辛两点六门疒
+I 水旁兴头小倒立
+O 火业头，四点米
+P 之字军盖道建底，摘礻（示）衤（衣）
+```
+
+折区
+
+```text
+N 已半巳满不出己，左框折尸心和羽
+B 子耳了也框向上
+V 女刀九臼山朝西
+C 又巴马，丢矢矣
+X 慈母无心弓和匕，幼无力
+```
+
 ## 五笔中的汉字结构及字型
 
 在五笔中，汉字分为左右型、上下型和杂合型汉字。凡是分不清上下左右结构的就是杂合型。
