--- a/data/blog/86-wubi.mdx
+++ b/data/blog/86-wubi.mdx
@@ -6,7 +6,13 @@ tags: ['coding']
 draft: false
 ---
 
+五笔输入法，简称五笔，是一种汉字形码输入法，区别于拼音输入法，其核心基础是“王永民”先生于1983年发明的王码五笔，至今（2013年）已有三个核心定型版本：86版、98版、新世纪版（2008年发布），其它五笔，诸如万能五笔、极点五笔、搜狗五笔、海峰五笔、智能五笔、小鸭五笔均是在王码五笔基础上发展的，以86最为普及，可能因版权原因，98版及新世纪版极少有其它五笔输入法支持。
 
+汉字是一种意形结合的象形文字，形体复杂，笔画繁多，它最基本的成分是笔画，由基本笔画构成汉字的偏旁部首（字根），再由字根组成有形有意的汉字。
+
+五笔字型是一种纯字型的编码方案，它由130个字根组字，重码少，便于盲打，输入速度快。
+
+“五笔”原意是也指五种基本笔画：横、竖、撇、捺（点）、折，任何一个汉字，也都是由这五种基本笔画及其衍生字根组成，通过使用一定的映射规则，至多只需要4个字母，即可完成一个汉字或词组的输入。
 
 ## 字根
 
@@ -66,6 +72,43 @@ B 子耳了也框向上
 V 女刀九臼山朝西
 C 又巴马，丢矢矣
 X 慈母无心弓和匕，幼无力
+```
+
+口诀解释：
+
+```
+11-G　王旁青头戋（兼）五一，(“兼”与“戋”同音) 
+12-F　土士二干十寸雨。　 
+13-D　大犬三羊古石厂， （“羊”指羊字底） 
+14-S　木丁西， 
+15-A　工戈草头右框七。 （“右框”即“匚”） 
+
+21-H　目具上止卜虎皮， (“具上”指具字的上部) 
+22-J　日早两竖与虫依。 
+23-K　口与川，码元稀， 
+24-L　田甲方框四车力。 (“方框”即“囗”)
+25-M　山由贝，下框几。
+
+31-T　禾竹一撇双人立， (“双人立”即“彳”)。 反文条头共三一。 (“条头”即“夂”) 
+32-R　白手看头三二斤， 
+33-E　月彡(衫)乃用家衣底。 (“家衣底”即“豕”) 
+34-W  人和八，三四里， (“人”和“八”在34里边) 
+35-Q　金勺缺点无尾鱼， (指“钅、勹”) 。
+犬旁留叉儿一点夕， ( 指“乂、儿、夕”) 。
+氏无七（妻）。 (“氏”去掉“七”) 
+
+41-Y　言文方广在四一， 高头一捺谁人去。(“谁”去掉“亻” 为“讠、谁”) 
+42-U　立辛两点六门疒， 
+43-I　 水旁兴头小倒立。 (指“氵、兴、小”) 
+44-O　火业头，四点米， (“业头”即“ 业 ”) 
+45-P　之字军盖建道底， (即“之、宀、冖、廴、辶”) 
+      摘礻(示)衤(衣)。 (“礻、衤”摘除末笔画即“ 礻”) 
+
+51-N　已半巳满不出己， 左框折尸心和羽。 
+52-B　子耳了也框向上。 (“框向上”即“凵”) 
+53-V　女刀九臼山朝西。 (“山朝西”即“彐”) 
+54-C　又巴马，丢矢矣， (“矣”去“矢”为“厶”) 
+55-X　慈母无心弓和匕， 幼无力。(“幼”去“力”为“幺”) 
 ```
 
 ## 五笔中的汉字结构及字型
