--- a/data/blog/architect-exam-2023.mdx
+++ b/data/blog/architect-exam-2023.mdx
@@ -1,5 +1,5 @@
 ---
-title: '出成绩了'
+title: '2023年参加架构师考试后的一些感想'
 date: "2023-12-08 14:39:00"
 summary: "2023年参加架构师考试后的一些感想"
 tags: ['life']
@@ -23,5 +23,5 @@ tags: ['life']
 孜孜不倦，重新来过，
 死磕架构，明年加油。
 
-（完）
+（没完）
 
